# Flow.Launcher.JsonRPC.Python

./: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.sh
.github/: dependabot.yml
.github/workflows/: release.yaml  release.yml  sdist.yaml  sdist.yml
flowlauncher/: FlowLauncher.py  FlowLauncherAPI.py  RPC.py  __init__.py  _version.py
